change image ingress response to not fail on vuln scan failure
